# VaultShip

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PUBLISHING.md  README.md  ROADMAP.md  SECURITY.md  create-vaultship-issues.sh  docker-compose.hardened.yml  flake.nix  llms.txt  seccomp-profile.json  vaultship.bind.json  vaultship.layer.key  vaultship.private.key  vaultship.public.key  vaultship.toml
.github/workflows/: ci.yml  release.yml  security-audit.yml
.vaultship/artifacts/: api.layer.enc.json  api.manifest.json  sample-app.layer.enc.json
.vaultship/keys/: api.key  sample-app.key
.vaultship/pulled/: sample-app.layer.tar
.vaultship/registry/: sample-app.manifest.json
crates/vaultship-cli/: Cargo.toml
crates/vaultship-cli/assets/: vaultship.toml.example
crates/vaultship-cli/src/: config.rs  main.rs
crates/vaultship-cli/src/commands/: bind.rs  build.rs  decrypt.rs  encrypt.rs  fingerprint.rs  harden.rs  init.rs  inspect.rs  keygen.rs  license.rs  mod.rs  pull.rs  push.rs  rotate_key.rs  run.rs  verify.rs
crates/vaultship-encrypt/: Cargo.toml
crates/vaultship-encrypt/src/: decrypt.rs  encrypt.rs  keys.rs  lib.rs  oci.rs  registry.rs
crates/vaultship-harden/: Cargo.toml
crates/vaultship-harden/src/: capabilities.rs  dockerfile.rs  lib.rs  readonly.rs  seccomp.rs
crates/vaultship-license/: Cargo.toml
crates/vaultship-license/src/: create.rs  fingerprint.rs  heartbeat.rs  lib.rs  offline.rs  validate.rs
crates/vaultship-sdk/: Cargo.toml
crates/vaultship-sdk/src/: check.rs  lib.rs
crates/vaultship-sign/: Cargo.toml
crates/vaultship-sign/src/: sign.rs  verify.rs
docs/: architecture.md  distribution-plan.md  exit-codes.md  getting-started.md  licensing-guide.md  observability.md  protection-profiles.md  threat-model.md
examples/: README.md
examples/dev/: commands.sh  docker-compose.yml  vaultship.toml
examples/devops/: license-issuance.sh  pipeline.sh  vaultship.toml
examples/sdk/: main.rs
packaging/: nfpm.yaml
packaging/aur/: PKGBUILD
packaging/chocolatey/: vaultship.nuspec
packaging/chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
packaging/homebrew/Formula/: vaultship.rb
packaging/nix/: default.nix
packaging/scoop/: vaultship.json
packaging/snap/: snapcraft.yaml
packaging/winget/: vaultship.yaml
scripts/: install.sh  setup-dev.sh  test-vm.sh
tests/: Cargo.toml
tests/fixtures/: vaultship.toml
tests/fixtures/sample-app/: Cargo.toml  Dockerfile
tests/fixtures/sample-app/src/: main.rs
tests/integration/: test_build_harden.rs  test_encrypt_decrypt.rs  test_full_pipeline.rs  test_license_flow.rs
