[workspace]
resolver = "2"
members = [
    "crates/vaultship-cli",
    "crates/vaultship-harden",
    "crates/vaultship-encrypt",
    "crates/vaultship-license",
    "crates/vaultship-sign",
    "crates/vaultship-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["VaultShip Contributors <maintainers@vaultship.dev>"]
license = "Apache-2.0"
repository = "https://github.com/vaultship/vaultship"
description = "Protected container runtime - encrypt, license, and harden Docker containers"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
blake3 = "1"
rand = "0.8"
rsa = "0.9"
base64 = "0.22"
ed25519-dalek = "2"
oci-spec = "0.9"
bollard = "0.18"
tar = "0.4"
flate2 = "1"
sysinfo = "0.33"
mac_address = "1"
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
