[package]
name = "vaultship-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "vaultship"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true

vaultship-harden = { path = "../vaultship-harden", version = "0.1.0" }
vaultship-license = { path = "../vaultship-license", version = "0.1.0" }
vaultship-encrypt = { path = "../vaultship-encrypt", version = "0.1.0" }
vaultship-sign = { path = "../vaultship-sign", version = "0.1.0" }
