[package]
name = "vaultship-license"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
chrono.workspace = true
uuid.workspace = true
base64.workspace = true
mac_address.workspace = true
hostname.workspace = true
sysinfo.workspace = true
rand.workspace = true
blake3.workspace = true
